work/yaml/velero-minio/minio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-velero-minio
  namespace: velero
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: minio-dev.rdev.tech
    http:
      paths:
      - path:
        backend:
          serviceName: minio
          servicePort: 9000
  tls:
  - hosts:
    - minio-dev.rdev.tech
    secretName: minio-ingress-secret
